RPS-223 - updated z-index to prevent overlapping image

--- a/app_rapala_core/cartridge/scss/default/checkout/_checkout.scss
+++ b/app_rapala_core/cartridge/scss/default/checkout/_checkout.scss
@@ -2058,6 +2058,7 @@ body {
                 background: 0;
                 overflow: auto;
                 zoom: 1;
+                z-index: 999;
             }
             h1 {
                 font-variant: normal;
@@ -2920,7 +2921,7 @@ body {
                 box-shadow: none;
                 border-radius: 0;
                 background: $white;
-                z-index: 999;
+                z-index: 90;
             }
         }
         .label {
